core/src/main/web/outputdisplay/bko-plot/bko-easyform.css
/*
 *  Copyright 2015 TWO SIGMA OPEN SOURCE, LLC
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */
.text-field-label {
  display: inline-block;
}

.text-area-label {
  vertical-align: top;
  margin: 5px 10px;
  min-width: 100px;
}

.check-box-label {
  margin: 0 10px;
  min-width: 100px;
}

.combo-box-label {
  margin: 0 10px;
  min-width: 100px;
}

.list-component-label {
  margin: 0 10px;
  min-width: 100px;
}

.check-box-group-label {
  margin: 0 10px;
  min-width: 100px;
  float: left;
}

.check-box-group-item-label {
  margin: 0 5px;
}

.check-box-group-item-label.vertical {
  display: table-row;
}

.check-box-group-item-label.horizontal {
}

.date-picker-label {
  margin: 0 10px;
  min-width: 100px;
}

.radio-button-label {
  margin: 0 10px;
  min-width: 100px;
  float: left;
}

.radio-button-items-container {
  display: table;
  width: 80%;
}

.radio-button-item-text {
  width: 10%;
}

.radio-button-item-text.vertical {
  display: table-cell;
}

.radio-button-item-text.horizontal {
}

.radio-button-item-label {
  margin-top: 5px;
}

.radio-button-item-label.vertical {
  display: table-row;
}

.radio-button-item-label.horizontal {
  display: table-cell;
}

input[type="radio"].radio-button-component-item {
  margin: 0 10px;
  vertical-align: middle;
}

input[type="radio"].radio-button-component-item.vertical {
  display: table-cell;
}

input[type="radio"].radio-button-component-item.horizontal {
}

input.check-box {
  height: 25px;
  vertical-align: middle;
}

input.date-picker {
  height: 25px;
  width: 120px;
}

.text-field-container {
  margin: 10px 0;
}

.text-area-container {
  margin: 10px 0;
}

.check-box-container {
  margin: 10px 0;
}

.combo-box-container {
  margin: 10px 0;
}

.list-component-container {
  margin: 10px 0;
}

.radio-button-container {
  margin: 10px 0;
}

.date-picker-container {
  margin: 10px 0;
}

.button-component-container {
  margin: 10px 0;
}

.list-component {
  padding: 5px;
}

.radio-button-item-spacer {
  display: table-cell;
  width: 100%;
}

.text-field {
  float: right;
  display: inline-block;
  margin: 0 5px;
}

.text-field.fixed-size {
  float: none;
}

div#easyFormContainer fieldset {
  border: 1px solid #c0c0c0;
  padding: 0.35em 0.625em 0.75em;
}

div#easyFormContainer fieldset legend {
  width: auto;
  border: 0;
  margin: 0;
  padding: 0 5px;
}

